[package]
name = "image-resize-rust"
version = "0.1.0"
edition = "2018"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
tokio = { version = "0.1.*", features = ["codec", "fs", "io", "reactor", "sync", "timer", "uds"] }
futures = "0.1.26"
bytes = "0.4.12"
tempfile = "3.1.0"
